[gd_scene format=3 uid="uid://dn3y4eppc4nk"]

[ext_resource type="Script" uid="uid://deggp6s0jt6o3" path="res://Mapas/scripts/mapa.gd" id="1_1all6"]
[ext_resource type="Texture2D" uid="uid://bupsjjnggg8fk" path="res://Mapas/texturas/Captura de pantalla 2026-02-05 095107.png" id="2_1all6"]
[ext_resource type="PackedScene" uid="uid://cdb65b23ty00f" path="res://Personaje/escenas/player.tscn" id="3_kk1kb"]
[ext_resource type="PackedScene" uid="uid://c1m1eal8optkg" path="res://Escenas/base/menu_pausa.tscn" id="4_iywlr"]
[ext_resource type="Script" uid="uid://bci8s0f50kb75" path="res://Escenas/Scripts/menu_pausa.gd" id="5_37ejg"]
[ext_resource type="PackedScene" uid="uid://b4pj7sosf3mp3" path="res://Enemigos/escenas/enemy_spawner.tscn" id="6_f5350"]
[ext_resource type="PackedScene" uid="uid://dsw0k8actsled" path="res://Personaje/armas/escenas/arma_aura.tscn" id="7_7ie5b"]
[ext_resource type="Script" uid="uid://bmwl7s8omfpbj" path="res://Personaje/scripts/spawn_info.gd" id="7_kfu48"]
[ext_resource type="PackedScene" uid="uid://ckimt4mnjqofa" path="res://Personaje/armas/escenas/arma_lanza.tscn" id="7_xdpc2"]
[ext_resource type="Texture2D" uid="uid://chgsadekbmw78" path="res://Mapas/texturas/barraexperiencia2.png" id="11_7ie5b"]
[ext_resource type="PackedScene" uid="uid://co2tejpdi45oj" path="res://Enemigos/escenas/EnemigoEsqueletoNegro.tscn" id="11_owe4l"]
[ext_resource type="Script" uid="uid://c4gynbcp1lmti" path="res://Personaje/scripts/healthBar.gd" id="11_rh4xi"]
[ext_resource type="Texture2D" uid="uid://dnxrx3dnub82u" path="res://Mapas/texturas/barraexperiencia.png" id="11_xdpc2"]
[ext_resource type="Script" uid="uid://74chaveq1xpc" path="res://Mapas/escenas/expbar.gd" id="12_hvhng"]
[ext_resource type="Script" uid="uid://6ct3dbr3vgxn" path="res://Mapas/escenas/margin_container.gd" id="14_7ie5b"]
[ext_resource type="Texture2D" uid="uid://bme37myc5gw8p" path="res://Mapas/texturas/barravida (1).png" id="14_kfu48"]
[ext_resource type="Texture2D" uid="uid://ca8h6l5v4unw0" path="res://Mapas/texturas/barravida (2).png" id="14_nj5h0"]
[ext_resource type="FontFile" uid="uid://c2xecdeg48yfe" path="res://font/Cinzel-Black.otf" id="17_kfu48"]
[ext_resource type="Script" uid="uid://cqtdtys1vbdec" path="res://Mapas/escenas/control.gd" id="17_nj5h0"]

[sub_resource type="Resource" id="Resource_nj5h0"]
script = ExtResource("7_kfu48")
time_end = 60
enemy_scene = ExtResource("11_owe4l")
enemy_num = 3
enemy_spawn_delay = 1
metadata/_custom_type_script = "uid://bmwl7s8omfpbj"

[node name="Mapa" type="Node2D" unique_id=645344216]
script = ExtResource("1_1all6")

[node name="Fondo" type="Sprite2D" parent="." unique_id=654127005]
texture_repeat = 2
texture = ExtResource("2_1all6")
region_enabled = true
region_rect = Rect2(0, 0, 4000, 4000)

[node name="Player" parent="." unique_id=1729713106 instance=ExtResource("3_kk1kb")]
collision_layer = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D" index="0" unique_id=404700811]

[node name="MenuPausa" parent="Player/Camera2D/CanvasLayer" unique_id=766943917 instance=ExtResource("4_iywlr")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
scale = Vector2(2.5004387, 2.1257293)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("5_37ejg")

[node name="MarginContainer" parent="Player/Camera2D/CanvasLayer/MenuPausa" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -51.276512
offset_right = 43.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="config" type="Button" parent="Player/Camera2D/CanvasLayer/MenuPausa/MarginContainer/VBoxContainer" index="1" unique_id=1669742015]
layout_mode = 2
text = "Configuraci√≥n"

[node name="HurtBox" parent="Player" index="4"]
HurtBoxType = 0

[node name="CollisionShape2D" parent="Player/HurtBox" index="0" unique_id=1705401529]
scale = Vector2(1.1353647, 1.67948)

[node name="AutoWeapon" parent="Player" index="5"]
visible = true

[node name="ArmaLanza" parent="Player" unique_id=1236051915 instance=ExtResource("7_xdpc2")]
damage = 80000

[node name="Hitbox" parent="Player/ArmaLanza" index="1" unique_id=1486097744]
collision_layer = 8
collision_mask = 8

[node name="ArmaAura" parent="Player" unique_id=490977804 instance=ExtResource("7_7ie5b")]

[node name="EnemySpawner" parent="." unique_id=1766740132 instance=ExtResource("6_f5350")]
spawns = Array[ExtResource("7_kfu48")]([SubResource("Resource_nj5h0")])

[node name="exp" type="CanvasLayer" parent="." unique_id=1626098533]

[node name="MarginContainer" type="MarginContainer" parent="exp" unique_id=172389482]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="exp/MarginContainer" unique_id=1906516323]
layout_direction = 3
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="exp/MarginContainer/Control" unique_id=595966379 node_paths=PackedStringArray("player")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -982.5
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
scale = Vector2(0.8, 0.3)
texture_under = ExtResource("11_xdpc2")
texture_progress = ExtResource("11_7ie5b")
script = ExtResource("12_hvhng")
player = NodePath("../../../../Player")

[node name="ProgressBar" type="ProgressBar" parent="exp/MarginContainer/Control/TextureProgressBar" unique_id=1123895451]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
show_percentage = false

[node name="vida" type="CanvasLayer" parent="." unique_id=253967934]

[node name="MarginContainer" type="MarginContainer" parent="vida" unique_id=1578496647]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -356.5
offset_bottom = -89.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("14_7ie5b")

[node name="TextureProgressBar" type="TextureProgressBar" parent="vida/MarginContainer" unique_id=1157754230 node_paths=PackedStringArray("player")]
layout_mode = 2
max_value = 80.0
texture_under = ExtResource("14_nj5h0")
texture_progress = ExtResource("14_kfu48")
script = ExtResource("11_rh4xi")
player = NodePath("../../../Player")

[node name="ProgressBar" type="ProgressBar" parent="vida/MarginContainer" unique_id=1702721655]
visible = false
layout_mode = 2
value = 100.0

[node name="timer" type="CanvasLayer" parent="." unique_id=143310774]

[node name="Control" type="Control" parent="timer" unique_id=1318684170]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 138.0
offset_right = 20.0
offset_bottom = 209.0
grow_horizontal = 2
script = ExtResource("17_nj5h0")

[node name="Timer" type="Timer" parent="timer/Control" unique_id=1321128066]

[node name="Label" type="Label" parent="timer/Control" unique_id=733165658]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -11.0
offset_right = 90.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("17_kfu48")
theme_override_font_sizes/font_size = 18
text = "eeee"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Player/Camera2D/CanvasLayer/MenuPausa/MarginContainer/VBoxContainer/Continuar" to="Player/Camera2D/CanvasLayer/MenuPausa" method="_on_continuar_pressed"]
[connection signal="pressed" from="Player/Camera2D/CanvasLayer/MenuPausa/MarginContainer/VBoxContainer/config" to="Player/Camera2D/CanvasLayer/MenuPausa" method="_on_config_pressed"]
[connection signal="pressed" from="Player/Camera2D/CanvasLayer/MenuPausa/MarginContainer/VBoxContainer/Salir" to="Player/Camera2D/CanvasLayer/MenuPausa" method="_on_salir_pressed"]
[connection signal="timeout" from="timer/Control/Timer" to="timer/Control" method="_on_timer_timeout"]

[editable path="Player"]
[editable path="Player/Camera2D/CanvasLayer/MenuPausa"]
[editable path="Player/HurtBox"]
[editable path="Player/AutoWeapon"]
[editable path="Player/AutoWeapon/Hitbox"]
[editable path="Player/ArmaLanza"]
[editable path="Player/ArmaLanza/Hitbox"]
[editable path="Player/ArmaAura"]
[editable path="Player/ArmaAura/Hitbox"]
